--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <title>Easter Promo</title>
   </head>
   <body>
-    <header></header>
     <main>
       <div class="img-container">
         <img class="decors" src="./assets/images/decors.png" alt="decors" />
       </div>
 
-      <audio autoplay>
+      <audio controls autoplay>
         <source src="./assets/audio/baby_laugh.mp3 " type="audio/mp3" />
       </audio>
     </main>
-    <footer></footer>
   </body>
 </html>
