--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <img class="decors" src="./assets/images/decors.png" alt="decors" />
       </div>
 
+      <!-- <audio controls autoplay>
+        <source src="./assets/audio/baby_laugh.mp3 " type="audio/mp3" />
+      </audio> -->
       <audio controls autoplay>
         <source src="./assets/audio/baby_laugh.mp3 " type="audio/mp3" />
       </audio>
