added happy easter

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <main>
       <div class="img-container">
         <img class="decors" src="./assets/images/decors.png" alt="decors" />
+        <div class="happy_easter">
+          <img class="" src="./assets/images/happy_easter.png" alt="decors" />
+        </div>
       </div>
 
       <!-- <audio controls autoplay>
